# termspark

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  next.py  setup.cfg  setup.py  versions.json
.github/: FUNDING.yml
.github/workflows/: deploy.yml  docs.yml  lint.yml  tests.yml
1.x/: 404.html  index.html  sitemap.xml
1.x/changelog/: index.html
1.x/installation/: index.html
1.x/license/: index.html
1.x/search/: search_index.json
1.x/upgrading/: index.html
1.x/usage/: index.html
2.x/: 404.html  index.html  sitemap.xml
2.x/changelog/: index.html
2.x/installation/: index.html
2.x/license/: index.html
2.x/search/: search_index.json
2.x/upgrading/: index.html
2.x/usage/: index.html
docs/: changelog.md  index.md  installation.md  license.md  upgrading.md  usage.md
src/: termspark.py
termspark/: __init__.py  termspark.py
termspark/exceptions/: argCharsExceededException.py  arg_chars_exceeded_error.py  combinationException.py  combination_error.py  emptyException.py  empty_error.py  lenNotSupportedException.py  len_not_supported_error.py  maxLenNotSupported.py  minNotReachedException.py  min_not_reached_error.py  multiplePositionsNotSupported.py  multiple_positions_not_supported_error.py  parameter_type_error.py  positionNotSupportedException.py  position_not_supported_error.py  printerArgException.py  printerSparkerMixException.py  (+1 more)
tests/: argchars_exceeded_exception_test.py  color_test.py  colors_test.py  existence_checker_test.py  fore_test.py  full_width_test.py  highlight_test.py  hyperlink_test.py  input_test.py  line_test.py  list_helper_test.py  max_len_not_supported_test.py  max_length_test.py  min_not_reached_exception_test.py  multiple_positions_not_supported_exception_test.py  painter_test.py  position_not_supported_exception_test.py  print_test.py  printer_arg_exception_test.py  printer_sparker_mix_exception_test.py  printer_validaor_test.py  printers_test.py  raw_test.py  separator_test.py  set_params_test.py  sparkers_test.py  structurer_test.py  styler_test.py  termspark_attributes_test.py  termspark_colors_test.py  termspark_return_test.py  termspark_test.py  text_styler_test.py  text_styles_test.py  trim_test.py  trimer_test.py  width_force_test.py
(+29 files in other folders)
