[metadata]
name = termspark
version = 1.1.0
author = Faissal Wahabali
author_email = fwahabali@gmail.com
description = Takes control of terminal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faissaloux/termspark
keywords =
    terminal
    cmd
    design
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7, <4
packages=find:
install_requires =
    colorama==0.4.5

[options.extras_require]
dev =
    pytest==7.1.2
    pytest-cov==3.0.0
    mypy==0.971
    pre-commit==2.20.0