[metadata]
name = termspark
version = 1.9.0
author = Faissal Wahabali
author_email = contact@faissaloux.com
description = Takes control of terminal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faissaloux/termspark
documentation = https://termspark.faissaloux.com
keywords =
    terminal
    cmd
    design
    colorful
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Typing :: Typed
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.package_data]
termspark = py.typed

[options]
include_package_data = true
python_requires = >=3.8, <4
packages=find:
install_requires =
    typing-extensions==4.9.0

[options.extras_require]
dev =
    pytest==7.3.2
    pytest-cov==4.0.0
    mypy==1.7.1
    pre-commit==3.2.0
    isort==5.11.5
    black==23.11.0
    mock==5.1.0
    types-mock==5.1.0
docs =
    mkdocs==1.4.2
    mkdocs-material==9.0.15
    pymdown-extensions==9.9.2
    mike==2.1.1

[isort]
profile=black
